--- a/site informal EM novo/css/home.css
+++ b/site informal EM novo/css/home.css
@@ -5,7 +5,7 @@
     aspect-ratio: 16/9;
     width: 80%;
     display:block;
-    margin-bottom: 2rem;
+    margin-bottom: 2em;
 }
 
 @media(max-width: 46.875em){
