--- a/site informal EM novo/css/index.css
+++ b/site informal EM novo/css/index.css
@@ -122,7 +122,7 @@ main{
    font-size: clamp(1rem, 2vw, 1.08rem);
 }
 
-main > h1{
+main > h1, h2{
    margin-top: 1em;
    margin-bottom: .3em;
 }
