--- a/site informal EM novo/css/index.css
+++ b/site informal EM novo/css/index.css
@@ -22,8 +22,24 @@
    padding: 0;
 }
 
-.link:hover{
-   opacity: 0.8;
+
+.link{
+   position: relative;
+}
+
+.link::before{
+   content: '';
+   position: absolute;
+   height: 100%;
+   background-color: rgb(0, 0, 0, .1);
+   transform: scaleX(0);
+   transform-origin: right;
+   transition: transform .5s;
+}
+
+.link:hover::before{
+   transform: scaleX(1);
+   transform-origin: left;
 }
 
 .darker-text{
@@ -100,8 +116,27 @@ nav{
 }
 
 .container-nav > ul > li > a{
+   position: relative;
    padding: .75em;
    display: block;
+}
+
+.container-nav > ul > li > a::after{
+   content: '';
+   position: absolute;
+   width: 100%;
+   height: 3px;
+   background-color: rgb(255, 255, 255);
+   left: 0;
+   bottom: 0;
+   transform: scaleX(0);
+   transform-origin: right;
+   transition: transform .5s;
+}
+
+.container-nav > ul > li > a:hover::after{
+   transform: scaleX(1);
+   transform-origin: left;
 }
 
 .container-nav > ul > li:hover{
@@ -110,7 +145,7 @@ nav{
 
 .main-sidebar{
    display:grid;
-   grid-template-columns: 1fr .35fr;
+   grid-template-columns: 1fr .4fr;
    grid-template-areas:
    "main side-bar";
 }
@@ -119,41 +154,101 @@ main{
    grid-area: main;
    padding-block: 2.5em;
    padding-right: 2em;
-   font-size: clamp(1rem, 2vw, 1.08rem);
+   font-size: clamp(1.02rem, 2vw, 1.08rem);
+}
+.text-section{
+   margin-block: 1.8em;
 }
 
-main > h1, h2{
-   margin-top: 1em;
-   margin-bottom: .3em;
+.text-section > h2{
+   margin-bottom: 0.5em;
 }
 
 main p{
-   line-height: 1.25;
-   text-indent: 1.5em;
+   line-height: 1.5;
+   text-indent: 2em;
    text-align: justify;
+   max-width: 65ch;
+}
+
+.section-list{
+   list-style: none;
+}
+
+.section-list > li{
+   margin-bottom: .85em;
+   position: relative;
+}
+
+.section-list > li::before{
+   content: '';
+   width: .3em;
+   height: .3em;
+   position: absolute;
+   left: -.8em;
+   top: 50%;
+   transform: translateY(-50%);
+   background-color: var(--blue-title);
+   border-radius: 50%;
 }
 
 .side-bar{
-   border: 1px solid black;
    grid-area: side-bar;
+   padding: 2.2em 0;
+}
+
+.side-section{
+   margin-bottom: 2em;
+}
+
+.side-section > h2{
+   font-size: 1.35rem;
+   margin-bottom: .5em;
+}
+
+.side-section > ul{
+   list-style: none;
+   margin-left: 1em;
+}
+
+.side-list > li{
+   margin-bottom: 1.2em;
+   position: relative;
+}
+.side-list > li > a{
+   color: hsl(227, 60%, 30%)
+}
+
+.side-list > li::before{
+   content: '';
+   width: .25em;
+   aspect-ratio: 1/1.8;
+   position: absolute;
+   left: -.8em;
+   top: .4em;
+   background-color: var(--darker-text);
 }
 
 footer{
-   background-image:linear-gradient(45deg, hsl(108, 40%, 11%), hsl(108, 40%, 16%))
+   background-image:linear-gradient(45deg, hsl(108, 40%, 11%), hsl(108, 40%, 16%));
+   padding-block: 2em;
 }
 
 .container-footer{
    display:flex;
    flex-wrap:wrap;
    gap: 1.5em;
-   padding-block: 5vh;
 }
 
 .footer-text{
-   line-height: 2.5rem;
    font-size: var(--text-small);
-   flex: 1;   
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   gap: 1.3em;
+
 }
+
 
 .menu-toggle{
    width: 40px;
@@ -241,34 +336,6 @@ footer{
    overflow-y: hidden;
 }
 
-.drop{
-   position: relative;
-}
-
-.drop > div{
-   display: grid;
-   width: 100%;
-   grid-template-rows: 0fr;
-   background-color: hsl(108, 40%, 33%);
-   color:white;
-   position: absolute;
-   transition: grid-template-rows .3s ease, padding .3s ease; 
-}
-
-.drop > div > ul{
-   list-style: none;
-   text-decoration: none;
-   overflow:hidden;
-   display: flex;
-   flex-direction: column;
-   gap: .7em;
-}
-
-.drop:hover > div{
-   padding: .5em; 
-   grid-template-rows: 1fr;
-}
-
 @media(max-width: 46.875em){
    .container{
       width: 100%;
@@ -334,4 +401,11 @@ footer{
       display: flex;
    }
 
+   .list > li::before{
+      display: none;
+   }
+
+   .container-footer{
+      gap: 3em;
+   }
 }
