--- a/site informal EM novo/css/index.css
+++ b/site informal EM novo/css/index.css
@@ -155,7 +155,7 @@ main{
    font-size: clamp(1.02rem, 2vw, 1.08rem);
 }
 .text-section{
-   margin-block: 1.8em;
+   margin-bottom: 1.8em;
    max-width: 65ch;
 }
 
